--- a/projets/dice/styles.css
+++ b/projets/dice/styles.css
@@ -10,6 +10,7 @@ body {
   padding: 2rem;
   background-color: #0b0721;
   color: white;
+  font-family: "Pixelify Sans", sans-serif;
 }
 .dice-options,
 .controls {
