--- a/projets/tic-tac-toe/styles.css
+++ b/projets/tic-tac-toe/styles.css
@@ -1,10 +1,14 @@
 body {
-  font-family: sans-serif;
   text-align: center;
-  background: #f0f0f0;
+  background-color: #0b0721;
+  color: white;
+  font-family: "Pixelify Sans", sans-serif;
 }
 h1 {
   margin-top: 20px;
+}
+h2 {
+  color: #f19e60;
 }
 .board {
   display: grid;
@@ -15,8 +19,8 @@ h1 {
   width: max-content;
 }
 .cell {
-  background: white;
-  border: 2px solid #333;
+  background: #f3b2e0;
+  border: 2px solid #ff7de1;
   font-size: 3rem;
   display: flex;
   align-items: center;
@@ -35,4 +39,7 @@ h1 {
   padding: 10px 20px;
   font-size: 1rem;
   cursor: pointer;
+  font-family: "Pixelify Sans", sans-serif;
+  border-radius: 10%;
+  background: #f19e60;
 }
