--- a/projets/page-404/styles.css
+++ b/projets/page-404/styles.css
@@ -1,8 +1,15 @@
 body {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+
   background-color: #0b0721;
   color: white;
   font-family: "Pixelify Sans", sans-serif;
+  text-align: center;
+  margin: 0;
 }
 h1 {
   margin-top: 20px;
